--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 	<p><center><i>By Aryaman Kumar</i></center></p>
+	<p id="rule"> Use spacebar to jump. </p>
 <h1 id= "score"></h1>
 <h1 id= "highscore"></h1>
 
